--- a/F13-part1-miniProject/package.json
+++ b/F13-part1-miniProject/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "multer": "^2.0.2"
   }
 }
